# traintastic

./: .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  .gitmodules  .poeditor  AUTHORS  BUILDING.md  README.md  build_client_vs2017_amd64_release.bat  build_server_vs2017_amd64_release.bat  traintastic.code-workspace  traintastic.geany  update-authors.sh
client/: CMakeLists.txt  dark.qrc  traintastic-client.pro  vcpkg-configuration.json  vcpkg.json
client/data/: data.qrc
client/data/wizard/: add_interface.json
client/debian/: traintastic-client.desktop
client/gfx/: common.qrc
client/gfx/dark/: dark.qrc
client/gfx/light/: light.qrc
client/src/: main.cpp  mainwindow.cpp  mainwindow.hpp  mdiarea.cpp  mdiarea.hpp  version.rc
client/src/board/: blockhighlight.cpp  blockhighlight.hpp  boardareagrid.hpp  boardareawidget.cpp  boardareawidget.hpp  boardcolorscheme.cpp  boardcolorscheme.hpp  boardwidget.cpp  boardwidget.hpp  getboardcolorscheme.cpp  getboardcolorscheme.hpp  tile.cpp  tile.hpp  tilemenu.cpp  tilemenu.hpp  tilepainter.cpp  tilepainter.hpp
client/src/clock/: analogclock.cpp  analogclock.hpp  clock.cpp  clock.hpp
client/src/dialog/: connectdialog.cpp  connectdialog.hpp  diagnosticreportdialog.cpp  diagnosticreportdialog.hpp  objectselectlistdialog.cpp  objectselectlistdialog.hpp  screenshotdialog.cpp  screenshotdialog.hpp  settingsdialog.cpp  settingsdialog.hpp  worldlistdialog.cpp  worldlistdialog.hpp  worldlistitemdelegate.cpp  worldlistitemdelegate.hpp
client/src/enum/: color.hpp  textalign.hpp
client/src/mainwindow/: mainwindowstatusbar.cpp  mainwindowstatusbar.hpp
client/src/misc/: colorpool.cpp  colorpool.hpp  methodaction.cpp  methodaction.hpp  mimedata.hpp
client/src/network/: abstractproperty.hpp  abstractvectorproperty.hpp  baseproperty.hpp  board.cpp  board.hpp  callmethod.hpp  client.cpp  client.hpp  connection.cpp  connection.hpp  createobject.cpp  createobject.hpp  error.cpp  error.hpp  event.cpp  event.hpp  handle.hpp  inputmonitor.cpp  inputmonitor.hpp  interfaceitem.cpp  interfaceitem.hpp  interfaceitems.cpp  interfaceitems.hpp  method.cpp  method.hpp  object.cpp  object.hpp  object.tpp  objectproperty.cpp  objectproperty.hpp  objectptr.hpp  objectvectorproperty.cpp  objectvectorproperty.hpp  outputkeyboard.cpp  outputkeyboard.hpp  outputmap.cpp  outputmap.hpp  property.cpp  property.hpp  serverlogtablemodel.cpp  (+10 more)
client/src/settings/: boardsettings.hpp  boardsettingswidget.cpp  boardsettingswidget.hpp  developersettings.hpp  developersettingswidget.cpp  developersettingswidget.hpp  generalsettings.hpp  generalsettingswidget.cpp  generalsettingswidget.hpp  setting.hpp  settingsbase.hpp  settingsbasewidget.cpp  settingsbasewidget.hpp  settingsdialog.cpp  settingsdialog.hpp  statusbarsettings.hpp  statusbarsettingswidget.cpp  statusbarsettingswidget.hpp
client/src/style/: abstractstyle.cpp  abstractstyle.hpp  materialdarkstyle.cpp  materialdarkstyle.hpp  materiallightstyle.cpp  materiallightstyle.hpp
client/src/subwindow/: boardsubwindow.cpp  boardsubwindow.hpp  hardwarelistsubwindow.cpp  hardwarelistsubwindow.hpp  objecteditsubwindow.cpp  objecteditsubwindow.hpp  objectsubwindow.cpp  objectsubwindow.hpp  serverconsolesubwindow.cpp  serverconsolesubwindow.hpp  serversettingssubwindow.cpp  serversettingssubwindow.hpp  subwindow.cpp  subwindow.hpp  subwindowtype.hpp  throttlesubwindow.cpp  throttlesubwindow.hpp
client/src/theme/: theme.cpp  theme.hpp
client/src/utils/: enum.cpp  enum.hpp  geticonforclassid.cpp  geticonforclassid.hpp  getlocalepath.cpp  getlocalepath.hpp  internalupdateholder.hpp  menu.hpp  rectf.hpp  settabwidget.cpp  settabwidget.hpp  translateenum.cpp  translateenum.hpp  trysetlocalename.cpp  trysetlocalename.hpp  zipwriter.cpp  zipwriter.hpp
client/src/widget/: alertwidget.cpp  alertwidget.hpp  commandstationlistwidget.cpp  commandstationlistwidget.hpp  createform.cpp  createform.hpp  createimagewidget.cpp  createimagewidget.hpp  createwidget.cpp  createwidget.hpp  decoderfunctionlistwidget.cpp  decoderfunctionlistwidget.hpp  decoderlistwidget.cpp  decoderlistwidget.hpp  hardwarewidget.cpp  hardwarewidget.hpp  inputlistwidget.cpp  inputlistwidget.hpp  inputmonitorwidget.cpp  inputmonitorwidget.hpp  interfaceitemnamelabel.cpp  interfaceitemnamelabel.hpp  iomapwidget.cpp  iomapwidget.hpp  ledwidget.cpp  ledwidget.hpp  lineeditwithfocusoutsignal.hpp  luascriptlistwidget.cpp  luascriptlistwidget.hpp  methodicon.cpp  methodicon.hpp  methodpushbutton.cpp  methodpushbutton.hpp  objecteditwidget.cpp  objecteditwidget.hpp  objectlistwidget.cpp  objectlistwidget.hpp  objectnamelabel.cpp  objectnamelabel.hpp  objectpropertycombobox.cpp  (+45 more)
client/src/wizard/: jsonwizard.cpp  (+10 more)
server/: CMakeLists.txt  FindLua.cmake  ideas.md  vcpkg-configuration.json  vcpkg.json
server/cmake/: add-resource.cmake  code-coverage.cmake  generateresourceheader.py
server/debian/: postinst  traintastic-server.service
server/simulate/: ecossimulator.py
server/src/: main.cpp  options.hpp  version.rc
server/test/: interface.cpp  interfaces.hpp  main.cpp  objectcreatedestroy.cpp  worldlist.cpp  zone.cpp
server/www/: throttle.html
shared/: CMakeLists.txt  ci.cmake  traintastic.cmake  version.cmake
shared/gfx/: appicon.icns  appicon.rc
shared/src/: codename.hpp  message.hpp
shared/translations/: da-dk.json  de-de.json  de-de.txt  en-us.json  en-us.txt  es-es.json  fr-fr.json  fy-nl.json  it-it.json  it-it.txt  json2lang.py  neutral.json  nl-nl.json  nl-nl.txt  pl-pl.json  sv-se.json  traintastic-lang.cmake
simulator/: CMakeLists.txt  vcpkg.json
simulator/debian/: traintastic-simulator.desktop
simulator/gfx/: common.qrc
simulator/layout/: dogbone.json  oval.json  oval_reverse_remove.json  oval_station.json  oval_station_2.json  oval_station_3.json  oval_station_track_obj.json  straight.json
simulator/src/: addtraindialog.cpp  addtraindialog.h  color.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp  simulator.cpp  simulator.hpp  simulatorview.cpp  simulatorview.hpp  trainsmodel.cpp  trainsmodel.h  version.rc
(+1994 files in other folders)
